test/TestSuite/Syntax/Errors/ts_summary_too_long.tjp
project "test" 2010-02-21 +2m

resource r1 "R1"

task t1 "Task 1" {
  effort 5d
  allocate r1
}

timesheet r1 2010-02-21 +1w {
  task t1 {
    work 100%
    remaining 0d
# MARK: error 17 ts_summary_too_long
    status green "headline" {
      summary -8<-
012345678901234567890123456789012345678901234567890123456789
012345678901234567890123456789012345678901234567890123456789
012345678901234567890123456789012345678901234567890123456789
012345678901234567890123456789012345678901234567890123456789
012345678901234567890123456789012345678901234567890123456789
012345678901234567890123456789012345678901234567890123456789
012345678901234567890123456789012345678901234567890123456789
012345678901234567890123456789012345678901234567890123456789
->8-
    }
  }
}

